--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>DG1 All Year Photo Gallery</h1>
+    <p>A gallery of all the images/assignments done throughout the year</p>
+    <div id="container"></div>
 </body>
 </html>
