--- a/random2.html
+++ b/random2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>2nd page</title>
+    <title>New Title of the page</title>
 </head>
 <body>
     
