Updated main page on the master side

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <h1>DG1 All Year Photo Gallery</h1>
     <p>A gallery of all the images/assignments done throughout the year</p>
+    <p>A second text</p>
     <div id="container"></div>
 </body>
 </html>
