Added the role and aria-labeledby attributes to the head for better accessibility

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1 id="title">DG1 Photo Gallery</h1>
+    <h1 id="title" role="heading" aria-labelledby="Digital Imaging 1 Photo Gallery">DG1 Photo Gallery</h1>
     <div id="container">
         <img src="./Photos_Drawings/B_W_mug1.jpg" alt="Black and White image of a mug">
         <img src="./Photos_Drawings/carpicture2.jpg" alt="A black and white picture of a car drifting">
