--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 </head>
 <body>
     <h1 id="title" role="heading" aria-labelledby="Digital Imaging 1 Photo Gallery">DG1 Photo Gallery</h1>
-    <div id="container">
-        <img src="./Photos_Drawings/B_W_mug1.jpg" alt="Black and White image of a mug">
-        <img src="./Photos_Drawings/carpicture2.jpg" alt="A black and white picture of a car drifting">
-        <img src="./Photos_Drawings/chair.jpg" alt="A picture of a chair">
-        <img src="./Photos_Drawings/f1_Ferrari_procreate_DG1_picture.png" alt="A picture of a Formula 1 Ferrari car">
-        <img src="./Photos_Drawings/IMG_7583.jpg" alt="A black and white picture of books in a pattern">
-        <img src="./Photos_Drawings/mugpicture2.jpg" alt="A close up picture of a mug">
-    </div>
+    <main>
+        <div id="container">
+            <img src="./Photos_Drawings/B_W_mug1.jpg" alt="Black and White image of a mug">
+            <img src="./Photos_Drawings/carpicture2.jpg" alt="A black and white picture of a car drifting">
+            <img src="./Photos_Drawings/chair.jpg" alt="A picture of a chair">
+            <img src="./Photos_Drawings/f1_Ferrari_procreate_DG1_picture.png" alt="A picture of a Formula 1 Ferrari car">
+            <img src="./Photos_Drawings/IMG_7583.jpg" alt="A black and white picture of books in a pattern">
+            <img src="./Photos_Drawings/mugpicture2.jpg" alt="A close up picture of a mug">
+        </div>
+    </main>
+    <footer>
+        Created to save all photos made in Digital Imaging 1 in highschool
+    </footer>
 </body>
 </html>
