Added an address element and styled it

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         </div>
     </main>
     <footer>
-        Created to save all photos made in Digital Imaging 1 in highschool
+        <p>Created to save all photos made in Digital Imaging 1 in highschool</p>
+        <address>Email: extrastuffforcode@gmail.com</address>
     </footer>
 </body>
 </html>
