--- a/index.html
+++ b/index.html
@@ -16,6 +16,19 @@
             <img src="./Photos_Drawings/f1_Ferrari_procreate_DG1_picture.png" alt="A picture of a Formula 1 Ferrari car">
             <img src="./Photos_Drawings/IMG_7583.jpg" alt="A black and white picture of books in a pattern">
             <img src="./Photos_Drawings/mugpicture2.jpg" alt="A close up picture of a mug">
+            <img src="./Intro_to_studio_lighting/IMG_9140.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9145.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9148.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9157.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9287.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9289.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9295.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9297.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9301.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9317.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9323.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9324.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9346.JPG" alt="">
         </div>
     </main>
     <footer>
