Added copyright statements to the footer and styles it

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <footer>
         <p>Created to save all photos made in Digital Imaging 1 in highschool</p>
         <address>Email: extrastuffforcode@gmail.com</address>
+        <p>&copy; 2023-2024 Alexus Huang. All rights reserved.</p>
     </footer>
 </body>
 </html>
