--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <img src="./Intro_to_studio_lighting/IMG_9145.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9148.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9157.JPG" alt="">
-            <img src="./Intro_to_studio_lighting/IMG_9287.JPG" alt="">
-            <img src="./Intro_to_studio_lighting/IMG_9289.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9295.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9297.JPG" alt="">
-            <img src="./Intro_to_studio_lighting/IMG_9301.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9317.JPG" alt="">
-            <img src="./Intro_to_studio_lighting/IMG_9323.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9324.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9346.JPG" alt="">
+            <img src="./Intro_to_studio_lighting/IMG_9287.JPG" alt="" class="vertical_photos"> 
+            <img src="./Intro_to_studio_lighting/IMG_9289.JPG" alt="" class="vertical_photos"> 
+            <img src="./Intro_to_studio_lighting/IMG_9301.JPG" alt="" class="vertical_photos"> 
+            <img src="./Intro_to_studio_lighting/IMG_9323.JPG" alt="" class="vertical_photos"> 
         </div>
     </main>
     <footer>
