Added horizontal bar div to HTML and sectioned out an area in CSS to style it

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
             <img src="./Photos_Drawings/f1_Ferrari_procreate_DG1_picture.png" alt="A picture of a Formula 1 Ferrari car">
             <img src="./Photos_Drawings/IMG_7583.jpg" alt="A black and white picture of books in a pattern">
             <img src="./Photos_Drawings/mugpicture2.jpg" alt="A close up picture of a mug">
+            <!-- Intro to Studio Lighting Pictures -->
+            <div id="horizontalBar">
+                <p>Intro to Studio Lighting Pictures</p>
+            </div>
             <img src="./Intro_to_studio_lighting/IMG_9140.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9145.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9148.JPG" alt="">
