--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <img src="./Photos_Drawings/IMG_7583.jpg" alt="A black and white picture of books in a pattern">
             <img src="./Photos_Drawings/mugpicture2.jpg" alt="A close up picture of a mug">
             <!-- Intro to Studio Lighting Pictures -->
-            <div id="horizontalBar">
-                <p>Intro to Studio Lighting Pictures</p>
+            <div class="horizontalBar">
+                <p>"Intro to Studio Lighting"</p>
             </div>
             <img src="./Intro_to_studio_lighting/IMG_9140.JPG" alt="">
             <img src="./Intro_to_studio_lighting/IMG_9145.JPG" alt="">
